# plexydesk

./: .gitignore  CMakeLists.txt  index.html  params.json
artwork/: CMakeLists.txt
artwork/themepacks/default/: .main.cfg.swp  CMakeLists.txt  main.cfg
artwork/themepacks/default/contact/: contact.qml
artwork/themepacks/default/desktoppeel/: desktoppeel.qml
artwork/themepacks/default/desktoppeel/resources/: CMakeLists.txt  peel.cpp  peel.h  plugin.cpp  plugin.h  qmldir
artwork/themepacks/default/facebook/: Scripts.js  facebook.qml
artwork/themepacks/default/facebook/plugins/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  socialaccessmanager.cpp  socialmodel.cpp  socialmodel.h
artwork/themepacks/default/folderview/: folderview.qml
artwork/themepacks/default/folderview/resources/: Scripts.js
artwork/themepacks/default/friendsBrowser/: friendsbrowser.qml
artwork/themepacks/default/friendsBrowser/resources/: Friend.qml
artwork/themepacks/default/resources/components/: QmlBackground.qml  SvgBackground.qml
artwork/themepacks/default/webbrowser/: webbrowser.qml
artwork/themepacks/default/webbrowser/content/: Button.qml  FlickableWebView.qml  Header.qml  ScrollBar.qml  UrlInput.qml
artwork/themepacks/default/welcome/: welcome.qml
artwork/themepacks/dev/: CMakeLists.txt
artwork/themepacks/dev/backdrop/: TestWater.qml
base/core/: CMakeLists.txt  abstractdesktopview.cpp  abstractdesktopview.h  abstractdesktopview_qt4.cpp  abstractdesktopwidget.h  abstractplugininterface.h  abstractsource.h  datasource.h  desktopviewplugin.h  plexy.h  pluginloader.cpp  pluginloader.h  pluginloader.mm  pluginloader_qt4.cpp
base/qt4/: .plexyconfig.cpp.swp  .plexyconfig.h.swp  CMakeLists.txt  baserender.cpp  dataplugin.h  desktopwidget.h  facebooksession.cpp  facebooksession.h  iconjob.cpp  iconjob.h  iconprovider.cpp  iconprovider.h  nativestyle.cpp  nativestyle.h  plexyconfig.cpp  plexyconfig.h  plexylistmodel.cpp  plexylistmodel.h  socialaccessmanager.cpp  socialaccessmanager.h  socialdata.cpp  socialdata.h  style.h  svgprovider.cpp  viewlayer.cpp  viewlayer.h
bundles/sample/: CMakeLists.txt  PrinterInterface.h  SampleEcho.h  SampleEcho.m
cmakemodules/: MacOSXBundleInfo.plist.in
extensions/data/cvwebcam/: CMakeLists.txt
extensions/data/example/: CMakeLists.txt
extensions/data/fbengine/: CMakeLists.txt  facebookengine.cpp  facebookengine.h  facebooklib.cpp  facebooklib.h  fbengine.desktop  fbengineinterface.cpp  fbengineinterface.h
extensions/data/fbengine/test/: CMakeLists.txt  fbtest.cpp  fbtest.h
extensions/data/flicker/: CMakeLists.txt
extensions/data/irc/: CMakeLists.txt
extensions/data/localphotos/: CMakeLists.txt
extensions/data/presence/: CMakeLists.txt
extensions/data/rest/: CMakeLists.txt  rest.cpp  rest.h
extensions/data/rss/: CMakeLists.txt
extensions/data/utube/: CMakeLists.txt
extensions/data/videoengine/: CMakeLists.txt
extensions/desktop/plexy/: desktopview.cpp  desktopview.h  desktopviewimpl.cpp  desktopviewimpl.h
extensions/facebook/authwin/: CMakeLists.txt  authwidget.cpp  authwidget.h
extensions/facebook/welcome/: CMakeLists.txt
extensions/qml/iconcontainer/: .iconloader.h.swp  CMakeLists.txt  Makefile  iconcontainer.qml  iconloader.cpp  iconloader.h  plugin.cpp  plugin.h  qdeclarativefolderlistmodel.cpp  qdeclarativefolderlistmodel.h  qmldir
extensions/qml/iconcontainer/component/: .Icon.qml.swp  CMakeLists.txt  Icon.qml
extensions/qml/iconcontainer/component/images/: CMakeLists.txt
extensions/qml/iconcontainer/dep/: folderlistmodel.pro  iconcontainer.pro
extensions/social/googleweather/: CMakeLists.txt
extensions/social/guardiannewswidget/: CMakeLists.txt
extensions/social/guardianplugin/: CMakeLists.txt
extensions/social/weatherplugin/: CMakeLists.txt
extensions/widgets/clock/: clockwidget.cpp
extensions/widgets/cpu/: cpu.desktop
extensions/widgets/friendswidget/: CMakeLists.txt
extensions/widgets/imagepile/: CMakeLists.txt
extensions/widgets/photoframe/: imageplugin.cpp
extensions/widgets/sociotwitterwidget/: CMakeLists.txt
extensions/widgets/twit/: CMakeLists.txt
extensions/widgets/videoview/: CMakeLists.txt
extensions/widgets/wallpaper-win32/: CMakeLists.txt
extensions/widgets/youtubewidget/: CMakeLists.txt
modules/friendsplugin/: CMakeLists.txt  friend.cpp  friend.h  friendlist.cpp  friendlist.h  plugin.h  qmldir
panel/test/: Cell.qml  panel.qml
runner/: .main.cpp.swp  CMakeLists.txt  desktopbaseui.cpp  desktopview.cpp  desktopview.h  main.cpp  main.mm  themepackloader.cpp  themepackloader.h
runner/test/: CMakeLists.txt
