project(SampleEchoBundle)

Set(MACOSX_BUNDLE true)

SET (bundleSource 
        SampleEcho.m)

INCLUDE_DIRECTORIES (/System/Library/Frameworks) 

FIND_LIBRARY(COCOA_LIBRARY Cocoa)

MARK_AS_ADVANCED (COCOA_LIBRARY)

SET(MAC_LIBS ${COCOA_LIBRARY})

ADD_LIBRARY(${PROJECT_NAME} MODULE ${bundleSource})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MAC_LIBS})


set(MACOSX_BUNDLE_CLASS "SampleEcho")

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    BUNDLE TRUE
    XCODE_ATTRIBUTE_MACH_O_TYPE mh_bundle
  )

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})

